--- a/Whack a jellyfish/Base.lproj/Main.storyboard
+++ b/Whack a jellyfish/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Nv-3z-PEI">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                             </arscnView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jyq-Wc-TNx">
                                 <rect key="frame" x="20" y="547" width="100" height="100"/>
@@ -43,23 +43,44 @@
                                     <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tPk-uy-zze"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LWh-De-mhw">
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Let's play" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CHR-zc-GOo">
+                                        <rect key="frame" x="141" y="11.5" width="93.5" height="30.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="08z-LT-gTW"/>
+                                    <constraint firstItem="CHR-zc-GOo" firstAttribute="centerX" secondItem="LWh-De-mhw" secondAttribute="centerX" id="QNz-zg-zrb"/>
+                                    <constraint firstItem="CHR-zc-GOo" firstAttribute="centerY" secondItem="LWh-De-mhw" secondAttribute="centerY" id="iKM-I3-1xM"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="LWh-De-mhw" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="26c-MG-Bgr"/>
                             <constraint firstItem="jyq-Wc-TNx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="44l-QG-8n9"/>
+                            <constraint firstItem="LWh-De-mhw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4mX-8F-B5f"/>
                             <constraint firstItem="5Nv-3z-PEI" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="E7p-zQ-Cpe"/>
+                            <constraint firstItem="5Nv-3z-PEI" firstAttribute="top" secondItem="LWh-De-mhw" secondAttribute="bottom" id="Hm6-59-mmk"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="X27-hl-CwS" secondAttribute="bottom" constant="20" id="Ix7-Q0-58E"/>
+                            <constraint firstItem="LWh-De-mhw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Kq2-8X-hNS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jyq-Wc-TNx" secondAttribute="bottom" constant="20" id="PDy-z5-SoG"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="X27-hl-CwS" secondAttribute="trailing" constant="20" id="bB5-sw-98x"/>
                             <constraint firstItem="5Nv-3z-PEI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gmW-PO-rGu"/>
                             <constraint firstItem="5Nv-3z-PEI" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="sAW-Ig-jcS"/>
-                            <constraint firstItem="5Nv-3z-PEI" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="zz7-tE-Rsh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="SceneView" destination="5Nv-3z-PEI" id="GCD-Y3-nbF"/>
                         <outlet property="play" destination="jyq-Wc-TNx" id="BL9-LP-8rl"/>
+                        <outlet property="timerLabel" destination="CHR-zc-GOo" id="w94-gt-V8u"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
